--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "bootstrap": "4.0.0-beta.2",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.1",
+    "chart.js": "2.7.1",
     "d3": "4.8.0",
     "font-awesome": "4.7.0",
     "intl": "1.2.5",
