--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "ngx-admin",
-  "version": "2.0.1",
-  "license": "MIT",
+  "name": "complaint-client",
+  "version": "1.0.0",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/akveo/ngx-admin.git"
@@ -45,16 +44,16 @@
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.5",
     "angular2-toaster": "4.0.0",
     "bootstrap": "4.0.0-beta.2",
+    "chart.js": "2.7.1",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.1",
-    "chart.js": "2.7.1",
     "d3": "4.8.0",
     "font-awesome": "4.7.0",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "leaflet": "1.0.3",
     "nebular-icons": "1.0.6",
-    "ng2-smart-table": "1.1.0",
+    "ng2-completer": "^1.6.3",
     "ng2-tree": "2.0.0-alpha.10",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
